Refactor(core): Apply DTOs, Mappers, and DDD to Line components
This commit refactors the 'Line' entity and its associated services, DTOs, mappers, and tests within the 'core' module to align with your project's architectural principles.

Key changes:

1.  **Line Entity (`Line.java`):**
    *   I reviewed the existing `Line` entity. No major structural changes (like composition for core attributes) were required as it does not inherit from `Facility` in a way that `Station` or `Building` did. Its existing fields and methods were deemed appropriate.

2.  **Data Transfer Objects (DTOs):**
    *   `LineResponse.java`: I defined this as a Java record containing `id`, `name`, and `color`. I simplified it from a previous version to focus on core line attributes.
    *   `LineCreateRequest.java` & `LineUpdateRequest.java`: I defined these as Java records with appropriate fields and validation annotations for creating and updating lines.

3.  **Mapper (`LineMapper.java`):**
    *   I introduced `LineMapper` using MapStruct for automated and type-safe conversion between `Line` entities and DTOs.
    *   It includes methods for:
        *   `Line` to `LineResponse`.
        *   `LineCreateRequest` to `Line`.
        *   `LineUpdateRequest` to `Line` (for partial updates, using `NullValuePropertyMappingStrategy.IGNORE`).

4.  **Line Repository (`LineRepository.java`):**
    *   I analyzed and confirmed that the existing custom query method `findByName` remains valid and requires no changes.

5.  **Line Service (`LineService.java`):**
    *   I refactored this to inject and utilize `LineMapper` for all DTO conversions, replacing previous manual or static factory method DTO instantiation.
    *   I ensured CRUD operations are cleanly implemented, using entity methods where appropriate (e.g., via `lineMapper.updateLineFromRequest`).
    *   I reviewed and refined logic for managing relationships with `Station` entities, particularly in `delete`, `addStationToLine`, and `findStati